helloworld/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - helloworld.dev-1.hsc.eofarm.com
    secretName: dev-1-tls
  rules:
  - host: helloworld.dev-1.hsc.eofarm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: helloworld
            port:
              number: 8080
